<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/margin_high">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_margin="@dimen/margin_low">

                <TextView
                    android:id="@+id/team_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/team_a"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_low"/>

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/margin_medium"
                    android:textSize="56sp"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/zero"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_low"
                    android:text="@string/three_points"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_low"
                    android:text="@string/two_points"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_low"
                    android:text="@string/free_throw"/>


            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_low"
                android:layout_marginBottom="@dimen/margin_low"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_margin="@dimen/margin_low">

                <TextView
                    android:id="@+id/team_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/team_b"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_low"/>
                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/margin_medium"
                    android:textSize="56sp"
                    android:layout_margin="@dimen/margin_medium"
                    android:text="@string/zero"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_low"
                    android:text="@string/three_points"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_low"
                    android:text="@string/two_points"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_low"
                    android:text="@string/free_throw"/>

            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_medium">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_marginBottom="@dimen/margin_medium"/>

    </LinearLayout>

</LinearLayout>